--- a/package.json
+++ b/package.json
@@ -1,37 +1,49 @@
 {
-  "name": "test-les-mauvaise",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "push": "npx drizzle-kit generate",
-    "migrate": "npx drizzle-kit migrate",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/drizzle-adapter": "^1.4.2",
-    "bcrypt": "^5.1.1",
-    "better-sqlite3": "^11.2.1",
-    "drizzle-orm": "^0.33.0",
-    "next": "14.2.7",
-    "next-auth": "^5.0.0-beta.20",
-    "react": "^18",
-    "react-dom": "^18",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/better-sqlite3": "^7.6.11",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "drizzle-kit": "^0.24.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "test-les-mauvaise",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "push": "npx drizzle-kit generate",
+        "migrate": "npx drizzle-kit migrate",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "ui:add": "npx shadcn add --",
+        "shadcn:add": "npm run ui:add"
+    },
+    "dependencies": {
+        "@auth/drizzle-adapter": "^1.4.2",
+        "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "bcrypt": "^5.1.1",
+        "better-sqlite3": "^11.2.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "drizzle-orm": "^0.33.0",
+        "lucide-react": "^0.437.0",
+        "next": "14.2.7",
+        "next-auth": "^5.0.0-beta.20",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.53.0",
+        "tailwind-merge": "^2.5.2",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/better-sqlite3": "^7.6.11",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "drizzle-kit": "^0.24.2",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.7",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
