--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "push": "npx drizzle-kit generate",
-        "migrate": "npx drizzle-kit migrate",
+        "db:generate": "npx drizzle-kit generate",
+        "db:migrate": "npx drizzle-kit migrate",
+        "db:studio": "npx drizzle-kit studio",
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
@@ -15,10 +16,12 @@
     "dependencies": {
         "@auth/drizzle-adapter": "^1.4.2",
         "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-accordion": "^1.2.0",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-radio-group": "^1.2.0",
         "@radix-ui/react-slot": "^1.1.0",
-        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
         "better-sqlite3": "^11.2.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -35,6 +38,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/bcryptjs": "^2.4.6",
         "@types/better-sqlite3": "^7.6.11",
         "@types/node": "^20",
         "@types/react": "^18",
